@@ -1,5 +1,7 @@
 2005-07-13  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/conf.c(display_help): Documented deprecated cmdline opts.
+
 	* src/libcommon/munge_defs.h:
 	  Tweaked _X_AC_META_GETVAL to allow both key:val and key=val in META.
 
